Update RotateToolOneAxis.java