@@ -399,9 +399,9 @@ public class RotateToolOneAxis implements ViewportTool {
         shaderProgram.set1i(gl,"useTexture",0);
         float colorScale = cursorOverHandle ? 1:0.5f;
         Color c2 = new Color(
-                Math.max(0,Math.min(0,color.getRed()*colorScale)),
-                Math.max(0,Math.min(0,color.getGreen()*colorScale)),
-                Math.max(0,Math.min(0,color.getBlue()*colorScale)));
+                Math.clamp(color.getRed()/255.0f*colorScale, 0, 1),
+                Math.clamp(color.getGreen()/255.0f*colorScale, 0, 1),
+                Math.clamp(color.getBlue()/255.0f*colorScale, 0, 1));
         shaderProgram.setColor(gl, "diffuseColor", c2);
 
         Camera camera = viewport.getActiveCamera();
